# drf_project

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py
materials/: models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0002_initial.py  0003_subscription.py  0004_alter_lesson_video.py  0005_course_cost_lesson_cost.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/fixtures/: payments.json
users/management/commands/: csu.py  fill_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_payment_data.py  0004_alter_payment_options.py  0005_payment_payment_link_payment_session_id.py  0006_payment_payment_status.py  0007_remove_payment_payment_sum.py
